# CoreReader

./: .gitignore  AGENTS.md  README.md  backup_README.md  bug_analysis_report.md  docker-compose.yml  test_download.py
backend/: .dockerignore  .gitignore  Dockerfile  download_models.py  pyproject.toml  requirements.txt  scraper.py  server.py  tts.py
backend/models/: voices.npz
docs/: ARCHITECTURE.md  BACKEND_AZURE.md  BACKEND_HUGGINGFACE.md  BACKEND_LOCAL.md  BACKEND_MODAL.md  FLUTTER_WEB.md  FRONTEND_BUILD.md  OFFLINE_DOWNLOADS.md
frontend/: README.md  pubspec.yaml
frontend/android/app/: build.gradle.kts
frontend/ios/Runner/: Info.plist
frontend/lib/: app.dart  main.dart
frontend/lib/screens/: add_novel_screen.dart  highlight_in_paragraph.dart  library_screen.dart  novel_detail_screen.dart  reader_screen.dart  settings_screen.dart
frontend/lib/services/: android_saf.dart  app_settings_controller.dart  downloads_controller.dart  downloads_models.dart  downloads_store.dart  library_controller.dart  local_defaults.dart  local_defaults_io.dart  local_defaults_stub.dart  local_kokoro_voice_bank.dart  local_novel_stream_controller.dart  local_store.dart  local_voice_list.dart  local_voice_list_io.dart  local_voice_list_stub.dart  novel_index_resolver.dart  novel_stream_controller.dart  reader_controller_factory.dart  reader_controller_factory_io.dart  reader_controller_factory_stub.dart  settings_store.dart  (+4 more)
frontend/linux/: CMakeLists.txt
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
frontend/windows/: CMakeLists.txt
(+15 files in other folders)
