[project]
name = "ln-tts-backend"
version = "0.1.0"
description = "FastAPI backend for LN-TTS (NovelCool scraping + local TTS streaming)"
requires-python = ">=3.10,<3.13"
dependencies = [
  "fastapi>=0.128.0",
  "uvicorn[standard]>=0.30.0",
  "aiohttp>=3.9.5",
  "beautifulsoup4>=4.12.3",
  "lxml>=5.2.2",
  "numpy>=1.26.0",
  "onnxruntime>=1.20.0",
  "kokoro-onnx>=0.2.6",
  "requests>=2.32.0",
  "soundfile>=0.12.0",
]

[tool.uv]
package = false
